<resources>
    <string name="app_name">Pet Em Foco</string>
    <string name="salvar">Salvar</string>
    <string name="google_maps_key">AIzaSyA5ajs6LhgYb3YfbuQ-hyDrUq4GYMjMkT0</string>


    <!--Strings relacionadas a cadastro de consumidor-->
    <string name="sucesso_cadastro_Toast">Sucesso ao cadastrar usuário</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_sua_senha">Digite sua senha (min. 6 caracteres)</string>
    <string name="repita_sua_senha">Repita sua senha</string>
    <string name="nome">Nome</string>
    <string name="confirmar_sua_senha">Confirme sua senha</string>
    <string name="sucesso_cadastro_proxima_etapa_Toast">Sucesso! Pronto para a próxima etapa</string>
    <string name="erro_cadastro_email_invalido_Toast">Erro ao cadastrar usuário: Email indicado não é válido.</string>
    <string name="erro_cadastro_senha_invalida_Toast">Erro ao cadastrar usuário: Escolha uma senha que contenha pelo menos 6 caracteres.</string>
    <string name="erro_cadastro_email_usado_Toast">Erro ao cadastrar usuário: Já existe uma conta com esse e-mail.</string>
    <string name="erro_cadastro_campos_obrigatorios_Toast">Erro ao cadastrar usuário: Preencha todos os campos</string>
    <string name="erro_cadastro_senhas_diferentes_Toast">Erro ao cadastrar usuário: Os campos de senha devem ser iguais.</string>
    <string name="erro_cadastro_sem_conexao">Erro ao cadastrar usuário: Verifique a sua conexão</string>
    <string name="erro_cadastro_nome_usuario_Toast">Erro ao cadastrar usuário: O nome de usuário inválido.</string>
    <string name="sucesso_cadastro">Cadastro Efetuado com Sucesso!</string>
    <string name="erro_ao_cadastrar">Erro ao cadastrar</string>
    <string name="erro_ao_atualizar">Erro ao atualizar</string>
    <string name="erro_ao_remover">Erro ao remover</string>
    <string name="sucesso_remocao">Remoção Efetuada com Sucesso!</string>
    <string name="sucesso_atualizacao">Atualização Efetuada com Sucesso!</string>
    <string name="falha_cadastro">Cadastro Falhou!</string>
    <string name="falha_remocao">Remoção Falhou!</string>
    <string name="falha_atualizacao">Atualização Falhou!</string>
    <string name="pergunta_do_sistema">Pergunta do Sistema</string>
    <string name="atencao">Atenção!</string>
    <string name="pergunta_confirma_dados_serao_perdidos">Os dados não salvos serão perdidos. Confirma?</string>
    <string name="pergunta_cadastro_endereco">Deseja cadastrar seu endereço agora?</string>

    <!--Strings relacionadas a login-->
    <string name="prompt_email">Email</string>
    <string name="prompt_senha">Senha</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="digite_sua_senha_login">Digite sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="editar">Editar</string>
    <string name="sucesso_login_Toast">Sucesso ao fazer login!</string>
    <string name="erro_login_invalido_Toast">Erro ao fazer login!</string>
    <string name="login_cancelado">Login cancelado</string>
    <string name="botao_login_google">Login com o Google</string>
    <string name="botao_login_facebook">Login com o Facebook</string>
    <string name="ou">Ou</string>

    <!--Strings relacionadas a endereço-->
    <string name="enderecos">Endereços</string>
    <string name="endereco">Endereço</string>
    <string name="cadastrar_endereco">Continuar o Cadastro</string>
    <string name="tb_cadastro_endereco">Cadastro de Endereço</string>
    <string name="tb_detalhes_endereco">Detalhes do Endereço</string>
    <string name="tb_editar_endereco">Edição de Endereço</string>
    <string name="digite_seu_logradouro">Digite seu logradouro</string>
    <string name="endereco_numero">Número</string>
    <string name="digite_seu_numero">Digite seu número</string>
    <string name="endereco_complemento">Complemento</string>
    <string name="endereco_logradouro">Logradouro</string>
    <string name="digite_seu_complemento">Digite o complemento</string>
    <string name="endereco_bairro">Bairro</string>
    <string name="digite_seu_bairro">Digite seu bairro</string>
    <string name="endereco_localidade">Cidade</string>
    <string name="digite_sua_cidade">Digite sua cidade</string>
    <string name="endereco_cep">CEP</string>
    <string name="digite_seu_cep">Digite seu CEP</string>
    <string name="endereco_uf">Estado</string>
    <string name="escolha_sua_uf">Escolha seu estado</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="erro_cadastro_endereco_campos_obrigatorios_Toast">Erro ao cadastrar endereço: Preencha pelo menos o logradouro, bairro e cidade</string>
    <string name="erro_atualizacao_campos_obrigatorios_endereco">Erro ao atualizar endereço: Preencha pelo menos o logradouro, bairro e cidade</string>
    <string name="sucesso_cadastro_endereco">Endereço cadastrado com sucesso!</string>
    <string name="sucesso_atualizacao_endereco">Endereço atualizado com sucesso!</string>
    <string name="sucesso_remocao_endereco">Endereço removido com sucesso!</string>
    <string name="pergunta_confirma_remocao_endereco">O endereço será removido. Confirma?</string>

    <!--Strings relacionadas a pet-->
    <string name="pets">Pets</string>
    <string name="tb_meus_pets">Meus Pets</string>
    <string name="botao_buscar_servicos">Buscar Serviços</string>
    <string name="botao_meus_favoritos">Meus Favoritos</string>
    <string name="tb_cadastro_pet">Cadastro de Pet</string>
    <string name="tb_editar_pet">Edição de Pet</string>
    <string name="botao_cadastrar_pet">Cadastrar Pet</string>
    <string name="prompt_idade_pet">Idade</string>
    <string name="prompt_tipo_pet">Tipo</string>
    <string name="prompt_genero_pet">Gênero</string>
    <string name="prompt_raca_pet">Raça</string>
    <string name="prompt_porte_pet">Porte</string>
    <string name="prompt_imagem_pet">Imagem</string>
    <string name="prompt_remover_imagem_pet">Remover Imagem</string>
    <string name="digite_nome_pet">Digite o nome do seu pet</string>
    <string name="digite_idade_pet">Digite a idade do seu pet</string>
    <string name="macho">Macho</string>
    <string name="femea">Fêmea</string>
    <string name="digite_raca_pet">Digite a raça do seu pet</string>
    <string name="tb_detalhes_pet">Detalhes do Pet</string>
    <string name="erro_cadastro_campos_obrigatorios_Pet">Erro ao cadastrar pet: Preencha o campo nome</string>
    <string name="erro_atualizacao_campos_obrigatorios_Pet">Erro ao atualizar pet: Preencha o campo nome</string>
    <string name="sucesso_cadastro_Pet">Pet cadastrado com sucesso!</string>
    <string name="sucesso_atualizacao_Pet">Pet atualizado com sucesso!</string>
    <string name="sucesso_remocao_Pet">Pet removido com sucesso!</string>
    <string name="pergunta_confirma_remocao_pet">O pet será removido. Confirma?</string>

    <!--Strings relacionadas a vacina-->
    <string name="tb_calendario_vacina">Calendário de Vacinas</string>
    <string name="tb_cadastro_vacina">Cadastro de Vacina</string>
    <string name="tb_detalhes_vacina">Detalhes da Vacina</string>
    <string name="tb_editar_vacina">Edição de Vacina</string>
    <string name="descricao">Descrição</string>
    <string name="digite_descricao_vacina">Digite a descrição da vacina</string>
    <string name="data">Data</string>
    <string name="excluir">Excluir</string>
    <string name="botao_registrar_vacina">Registrar Vacina</string>
    <string name="botao_calendario_vacina">Calendário de Vacinas</string>
    <string name="sucesso_atualizacao_vacina">Vacina atualizada com sucesso!</string>
    <string name="sucesso_cadastro_vacina">Vacina cadastrada com sucesso!</string>
    <string name="sucesso_remocao_vacina">Vacina removida com sucesso!</string>
    <string name="pergunta_confirma_remocao_vacina">A vacina será removida. Confirma?</string>

    <string name="facebook_app_id">1383454871782340</string>
    <string name="fb_login_protocol_scheme">fb1383454871782340</string>

    <!--Strings relacionadas aos favoritos-->
    <string name="tb_meus_favoritos">Meus Favoritos</string>
    <string name="favoritado">Estalecimento adicionado aos favoritos!</string>
    <string name="desfavoritado">Estalecimento removido dos favoritos!:</string>
    <string name="existente">Estalecimento já favoritado!</string>
    <!--Strings relacionadas ao estbelecimento-->
    <string name="estabelecimento">Estabelecimento:</string>
    <string name="tb_acesso_estabelecimento">Informações do Estabelecimento</string>
    <string name="servicos">Serviços:</string>
    <string name="telefone">Telefone:</string>
    <string name="cpf_cnpj">CPF/CNPJ:</string>
    <string name="horario">Horário:</string>
    <string name="email">Email:</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="tb_detalhes_servico">Detalhes do Serviço</string>
    <string name="botao_ver_estabelecimento">Detalhes do Estabelecimento</string>
    <string name="botao_contratar_servico">Contratar Serviço</string>
    <string name="sucesso_avaliacao_estabelecimento">Avaliação realizada com Sucesso!</string>
    <string name="sucesso_atualizacao_nota">Atualização Realizado com Sucesso!</string>
    <string name="sucesso_avaliacao_servico">Avaliação realizada com Sucesso!</string>
    <string name="erro_atualizacao_nota">Atualização com problema!</string>
    <string name="erro_avaliacao_estabelecimento">Erro ao realizar Avaliação do Estabelecimento</string>
    <string name="erro_avaliacao_servico">Erro ao realizar Avaliação do Serviço</string>


    <!--Strings relacionadas a tela de busca-->
    <string name="tb_estabelecimentos">Estabelecimentos</string>
    <string name="tb_fornecedor">Fornecedores</string>
    <string name="tb_autonomos">Autônomos</string>
    <string name="tb_servicos">Busca por serviços</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="estabelecimento_nao_encontrado">Estabelecimento não encontrado.Tente ampliar o raio de busca</string>
    <string name="servicos_nao_encontrado">Não foram encontrados serviços próximos a você.Tente ampliar o raio de busca</string>

    <string name="action_settings">Settings</string>
    <string name="buscaEstabelecimento">Nome do estabelecimento</string>

    <!--Strings relacionadas a avaliação-->
    <string name="tb_avaliar_estabelecimento">Avaliação</string>
    <string name="tb_avaliar_servico">Avaliação</string>
    <string name="tb_avaliacoes_estabelecimento">Avaliações</string>
    <string name="avaliador">Usuário</string>
    <string name="comentario">Comentário:</string>
    <string name="avaliar">Avaliar</string>
    <string name="title_activity_filtro_busca">FiltroBuscaActivity</string>
    <string name="erro_timeout_msg">Operação demorou demais.Verfique sua conexão com a internet</string>

    <!--Strings relacionadas ao filtro de Serviço-->
    <string name="filtro_atualizado_servico">Filtro salvo com sucesso</string>

    <!--Strings relacionadas ao Serviço-->
    <string name="tb_avaliacoes_servico">Avaliações</string>

    <!--Strings relacionadas a Contratação de Serviço-->
    <string name="tb_agenda_estabelecimento">Agenda do Estabelecimento</string>
    <string name="solicitacao_enviada">Os convites serão enviados.</string>
    <string name="selecione_dia_horario">Selecione o dia e horário que deseja contratar o serviço</string>

    <string name="api_key_google_matrix">AIzaSyBrKPS2exi5vhLYY1H1islk4UUlRb4Z9Rk</string>
    <string name="url_matrix_distance">https://maps.googleapis.com/maps/api/distancematrix/json?units=metric</string>
    <string name="title_activity_avaliar_servico">AvaliarServicoActivity</string>
    <string name="avaliar_servico">Avaliar Serviço</string>
    <string name="avaliacoes_do_servico">AVALIAÇÕES DO SERVIÇO</string>
    <string name="title_activity_cadastro_fornecedor_tipo">CadastroFornecedorTipoActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="tv_promocoes">Promoções</string>
    <string name="tb_detalhes_promocao">Detalhes da promoção</string>

</resources>
